<resources>
    <string name="app_name">app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="ingrese_su_usuario">Ingrese su usuario</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="cmusic">CMusic</string>
    <string name="todo">TODO</string>
    <string name="todoa">TODOa</string>
    <string name="registro_de_cuenta">Registro De Cuenta</string>
    <string name="nombre_y_apellido">Nombre y Apellido</string>
    <string name="ingrese_nombre_de_usuario">Ingrese Nombre de Usuario</string>
    <string name="ingrese_su_gmail">Ingrese su gmail</string>
    <string name="ingrese_su_contrase_aj">Ingrese su contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="continuar">Continuar</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="todoh">TODO</string>
    <string name="todojk">TODO</string>
    <string name="registro_de_cuentaa">Registro De Cuenta</string>
    <string name="aconfirmar_contrase_a">Confirmar contraseña</string>
    <string name="continuara">Continuar</string>
    <string name="nombre_y_apellidoa">Nombre y Apellido</string>
    <string name="ingrese_su_contrase_aa">Ingrese su contraseña</string>
    <string name="ya_tienes_una_cuentaa">¿Ya tienes una cuenta?</string>
    <string name="ingrese_su_gmaila">Ingrese su gmail</string>
    <string name="ingrese_nombre_de_usuarioa">Ingrese Nombre de Usuario</string>
    <string name="iniciar_sesiona">Iniciar sesion</string>
    <string name="todoaaa">TODO</string>
    <string name="todosd">TODO</string>
    <string name="mapa">Mapa</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="nombre_apellido">nombre_apellido</string>
    <string name="nombre_usuario">nombre_usuario</string>
    <string name="gmail">gmail</string>
    <string name="contrase_aa">contraseña</string>
    <string name="con_contrase_a">con_contraseña</string>
    <string name="contrase_aaaa">contrase_aaaa</string>
    <string name="escuela_de_cultura_y_difusi_n_art_stica_claudio_arrau_le_n">Escuela de Cultura y Difusión Artística Claudio Arrau León</string>
    <string name="la_escuela_de_cultura_y_difusi_n_art_stica_claudio_arrau_le_n_existe_desde_el_1_de_julio_de_1942_y_fue_creada_gracias_al_apoyo_de_las_autoridades_de_entonces_a_fin_de_satisfacer_las_necesidades_que_detectaban_de_incorporar_las_disciplinas_art_sticas_en_la_ense_anza_de_los_estudiantes_en_primera_instancia_cumplir_a_una_funci_n_t_cnica_y_se_le_conoci_como_escuela_de_arte_popular_que_ense_aba_distintos_oficios">La Escuela de Cultura y Difusión Artística Claudio Arrau León existe desde el 1 de julio de 1942 y fue creada gracias al apoyo de las autoridades de entonces, a fin de satisfacer las necesidades que detectaban de incorporar las disciplinas artísticas en la enseñanza de los estudiantes. En primera instancia cumpliría una función técnica y se le conoció como Escuela de Arte Popular, que enseñaba distintos oficios.</string>
    <string name="aqu_nos_podremos_encontrar_con_sitios_en_los_cuales_podemos_encontrar_colegios_de_musica_como_museos_o_teatros_y_a_la_vez_artistas_callejeros_donde_podemos_ver_mas_de_alguna_ocasion_su_profesion_de_la_expresion_del_arte_musical_y_no_solo_de_la_musica_si_no_del_arte_mismo">Aquí nos podremos encontrar con sitios en los cuales podemos encontrar colegios de musica, como museos o teatros y a la vez artistas callejeros donde podemos ver mas de alguna ocasion su profesion de la expresion del arte musical y no solo de la musica si no del arte mismo</string>
    <string name="es_una_escuela_que_tiene_como_fin_darle_a_sus_estudiantes_un_gran_aprendisaje_sobre_lo_que_es_la_cultura_musical_y_que_puedan_sacar_el_mejor_potencial_de_cada_uno">Es una escuela que tiene como fin darle a sus estudiantes un gran aprendisaje sobre lo que es la cultura musical y que puedan sacar el mejor potencial de cada uno</string>
    <string name="instituto_superior_de_m_sica_de_chile">Instituto Superior de Música De Chile</string>
    <string name="museo_claudio_arrau">Museo Claudio Arrau</string>
    <string name="museo_sobre_la_vida_y_carrera_del_famoso_pianista_claudio_arrau_le_n_adem_s_de_exhibir_su_piano">Museo sobre la vida y carrera del famoso pianista Claudio Arrau León, además de exhibir su piano.</string>
    <string name="atras">Atras</string>
    <string name="siguiente">Siguiente</string>
    <string name="ubicaciones_en_el_mapa">Ubicaciones en el mapa</string>
    <string name="cmusichh">CMusic</string>
    <string name="lugares_donde_podra_encontrar_lo_que_busca">Lugares donde podra encontrar lo que busca</string>
    <string name="nombre_de_los_lugares">Nombre de los lugares</string>
    <string name="aqu_nos_encontraremos_con_el_teatro_municipal_donde_en_mas_de_una_ocasion_nos_podremos_encontrar_con_bastantes_artistas_musicales_y_no_solo_artistas_musicales_si_no_donde_podremos_ver_el_arte_en_bastantes_formas_de_expresion">Aquí nos encontraremos con el teatro municipal donde en mas de una ocasion nos podremos encontrar con bastantes artistas musicales y no solo artistas musicales si no donde podremos ver el arte en bastantes formas de expresion</string>
    <string name="teatro_municipal">teatro municipal</string>
    <string name="plaza_de_armas">Plaza de armas</string>
    <string name="aparte_de_ser_una_simple_plaza_aqui_nos_podremos_encontrar_artistas_callejeros_donde_nos_mostraran_el_arte_visual_las_cosas_que_han_podido_crear_de_dinstintas_formas">Aparte de ser una simple plaza aqui nos podremos encontrar artistas callejeros donde nos mostraran el arte visual, las cosas que han podido crear de dinstintas formas</string>
    <string name="pasarela_chillan">Pasarela chillan</string>
    <string name="al_ser_esta_una_zona_en_el_cual_suele_pasar_bastante_genta_al_ver_tiendas_lugares_de_comida_nosotros_nos_podremos_encontrar_a_gente_mostrandonos_su_arte_musical_de_bastante_cosas_diariamente_tambien_podremos_ver_el_arte_de_las_manualidades_de_distintas_personas_dandonos_a_conocer_lo_que_son_capaz_de_crear_con_sus_manos_de_distintas_formas">Al ser esta una zona en el cual suele pasar bastante genta al ver tiendas, lugares de comida, nosotros nos podremos encontrar a gente mostrandonos su arte musical de bastante cosas diariamente, tambien podremos ver el arte de las manualidades de distintas personas dandonos a conocer lo que son capaz de crear con sus manos de distintas formas</string>
    <string name="atrasf">Atras</string>
    <string name="iniciof">Inicio</string>
    <string name="contra">contra</string>
    <string name="confirmar_contra">confirmar_contra</string>
    <string name="contrase_aaa">Contraseña</string>
    <string name="gmaila">Gmail</string>
    <string name="nombre_del_usuarioaa">Nombre del usuario</string>
    <string name="usuarioaaa">Usuario</string>
    <string name="gmailaa">Gmail</string>
    <string name="contrase_aaaaaa">Contraseña</string>
    <string name="usuarioooo">usuario</string>
    <string name="gmaill">gmail</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="edit_done">Edit Done</string>
    <string name="edite_done">Edite Done</string>
    <string name="edit_donee">Edit done</string>
</resources>